--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,5 @@ board_build.filesystem_size = 0.5m
 [env:rpipicow]
 board = rpipicow
 lib_deps = openlcb/OpenLCB_Single_Thread@^0.1.10
+
+upload_port = COM14
